# plenoptic

./: .coverage  .coverage.Hannas-MacBook-Pro-3.local.53247.XPfOWDvx  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  environment.yml  noxfile.py  pyproject.toml  setup.py  treebeard.yaml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check_supported_versions.py  check_versions.yml  ci.yml  deploy.yml  draft-pdf.yml  notebooks.yml  treebeard.yml  zizmor.yml
data/256/: checkerboard.pgm  nuts.pgm  sawtooth.pgm
data/MAD_results/: samp6_L128_results.mat
data/images/256/: metal.pgm
docs/: Makefile  api.rst  api_modules.rst  api_synth_modules.rst  citation.md  citation.rst  conceptual_intro.md  conceptual_intro.rst  conf.py  environment.yml  index.md  index.rst  install.md  install.rst  jupyter.md  jupyter.rst  models.md  models.rst  modules.rst  plenoptic.metric.rst  plenoptic.rst  plenoptic.simulate.canonical_computations.rst  plenoptic.simulate.models.rst  plenoptic.simulate.rst  plenoptic.synthesize.rst  references.bib  reproducibility.md  reproducibility.rst  synthesis.md  synthesis.rst  tips.md  tips.rst
docs/_static/: custom-icon.js  custom.css  search-table.js  version_switcher.json
docs/_templates/: module_source_order.rst.jinja  synthesis_module.rst.jinja  synthesis_object.rst.jinja  torch_module.rst.jinja
docs/_templates/autosummary/: class.rst  module.rst
docs/api/: components.rst  debugging.rst  display.rst  external.rst  images.rst  metrics.rst  models.rst  optimization.rst  plot.rst  process.rst  synthesis.rst  synthesis_helper.rst  top_level.rst  validation.rst
docs/developers/: contributing.md  index.md  synthesis.md
docs/getting_started/: index.md  install.md  jupyter.md  quickstart.md
docs/reference/: citation.md  index.md  migration_guide.md  models.md  reproducibility.md  tips.md
docs/scripts/: conceptual_intro.py  conceptual_intro_data.json  feature_extractor.py  feature_extractor_mpl.py  synthesis_video.py
docs/tutorials/: 00_quickstart.md  00_quickstart.nblink  00_simple_example.nblink  01_Linear_approximation_of_nonlinear_model.nblink  02_Eigendistortions.nblink  03_Steerable_Pyramid.nblink  04_Perceptual_distance.nblink  05_Geodesics.nblink  05_Hierarchical_model_LGN_V1_V2.nblink  06_Metamer.nblink  07_MAD_Competition.nblink  08_Simple_MAD.nblink  09_Original_MAD.nblink  10_Synthesis.nblink  Demo_Eigendistortion.nblink  Display.nblink  Metamer-Portilla-Simoncelli.nblink  Synthesis_extensions.nblink  hierarchical_model.nblink  linear_approx.nblink  mad.nblink  metamer.nblink  orig_mad.nblink  perceptual_distance.nblink  quickstart.md  simple_mad.nblink  synthesis.nblink  testing-new-synthesis.nblink
docs/tutorials/advanced/: Display.md  Display.nblink  Synthesis_extensions.md  Synthesis_extensions.nblink
docs/tutorials/applications/: 09_Original_MAD.nblink  Demo_Eigendistortion.md  Demo_Eigendistortion.nblink  Original_MAD.md
docs/tutorials/intro/: 02_Eigendistortions.nblink  05_Geodesics.nblink  06_Metamer.nblink  MAD_Competition.md  (+7 more)
docs/user_guide/: index.md
examples/: 00_quickstart.ipynb  00_simple_example.ipynb  01_Linear_approximation_of_nonlinear_model.ipynb  02_Eigendistortions.ipynb  02_From_autodiff_to_eigendist.ipynb  03_Steerable_Pyramid.ipynb  03_Texture_metamer.ipynb  04_Perceptual_distance.ipynb  05_Geodesics.ipynb  05_Perceptual_distance.ipynb  06_Metamer.ipynb  07_MAD_Competition.ipynb  07_Metamer.ipynb  07_Simple_MAD.ipynb  08_MAD_Competition.ipynb  08_Simple_MAD.ipynb  09_Original_MAD.ipynb  09_Simple_MAD.ipynb  10_Synthesis.ipynb  1_Linear_approximation_of_nonlinear_model.ipynb  6_Geodesic.ipynb  Demo_Eigendistortion.ipynb  Demo_Geodesics.ipynb  Demo_Steerable_Pyramid.ipynb  Display.ipynb  From_autodiff_to_eigendist.ipynb  Gain_Control.ipynb  Linear_approx.ipynb  MAD_Competition.ipynb  Metamer.ipynb  Model_PortillaSimoncelli.ipynb  Original_MAD.ipynb  README.md  Sampling_and_Aliasing.ipynb  Simple_MAD.ipynb  Synthesis.ipynb  Synthesis_extensions.ipynb  V2.ipynb  perceptual_distance.ipynb  pooled_texture_model.ipynb  (+7 more)
examples/to_delete/: Gain_Control.ipynb  decorrelation.ipynb  synthesize_portilla_simoncelli.py  synthesize_spectral.py
jenkins/: Dockerfile  Jenkinsfile  requirements.txt
joss_paper/: paper.bib  paper.md  references.bib
linting/: check_apidocs.py  check_docstrings.py  check_markdown.py  check_mpl_inline.py  check_regression_tests.py  check_tutorial_semicolons.py  check_tutorials.py  fix_tutorial_semicolons.py  ruff_notebooks.py
plenoptic/: __init__.py
plenoptic/metric/: DN_sigmas.npy  __init__.py  classes.py  model_metric.py  naive.py  nspd_filters.pickle  nspd_sigmas.pickle  perceptual_distance.py
plenoptic/simulate/: V2.py  __init__.py  frontend.py  laplacian_pyramid.py  non_linearities.py  pooling.py  portilla_simoncelli.py  spectral.py  steerable_pyramid_freq.py  texture_statistics.py  ventral_stream.py
plenoptic/synthesize/: Synthesis.py  __init__.py  autodiff.py  eigendistortion.py  geodesic.py  mad_competition.py  matched_representation.py  metamer.py  old_synthesis.py  perceptual_distance.py  simple_metamer.py  synthesis.py
plenoptic/tools/: __init__.py  conv.py  convergence.py  data.py  display.py  external.py  fit.py  metamer_utils.py  optim.py  signal.py  stats.py  straightness.py  validate.py  visualization.py
src/: conftest.py
src/plenoptic/: __init__.py  __init__.pyi  _api_change.py  conftest.py  convergence.py  external.py  io.py  loss.py  optim.py  regularization.py  regularize.py  tensors.py  validate.py  version.py
tests/: .coveragerc  check_docstrings.py  check_sphinx_directives.py  check_tutorials.py  conftest.py  test_api.py  test_data_get.py  test_display.py  test_eigendistortion.py  test_geodesic.py  test_mad.py  test_metamers.py  test_metric.py  test_models.py  test_plenoptic.py  test_steerable_pyr.py  test_synthesis.py  test_tools.py  test_uploaded_files.py  tests.py  utils.py
(+167 files in other folders)
